--- a/src/sass/components/_pushup.scss
+++ b/src/sass/components/_pushup.scss
@@ -4,7 +4,7 @@
     font-size: 15px;
     line-height: 1.2;
     color: #fff;
-    background-color: $color-main;
+    background-color: $color-accent;
     overflow: hidden;
     text-overflow: ellipsis;
     position: fixed;
