--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -37,7 +37,7 @@
 				</div><!-- end logo -->
 
 				<!-- begin search -->
-				<div class="search header__search js-search">
+				<div class="search header__search js-search" tooltip="поиск тканей">
 					<form class="search__form">
 							<input type="text" class="search__field js-search-input" placeholder="Поиск по тканям..." autocomplete="off">
 							<button type="submit" class="search__btn">
