--- a/src/templates/password-recowery.html
+++ b/src/templates/password-recowery.html
@@ -9,53 +9,37 @@ title: Востановление пароля
 
 	<div class="container">
 
-		<div class="form">
-			<div class="form__header">
-				<div class="form__title">Вход или регистрация</div>
-			</div>
+		<div class="section-header cart__title">
+			<h1 class="h1">Востановление пароля</h1>
+		</div>
 
-			<div class="form__inner">
-				<form class="auth-form">
-					<div class="input input--email form__input">
-						<input type='email' class="input__field" placeholder="Введите e-mail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
-						<span class="input__error">*Какая-то ошибочка вышла</span>
-					</div>
+		<div class="password__inner">
+			<div class="form password__form">
 
-					<div class="input input--password form__input">
-						<input type='password' class="input__field" placeholder="Введите пароль">
-						<i class="input__icon fal fa-eye-slash js-input-password--show"></i>
-						<i class="input__icon fal fa-eye js-input-password--hide" style="display: none;"></i>
-						<span class="input__error">*Какая-то ошибочка вышла</span>
-					</div>
-
-					<div class="form__box">
-						{{item.checkbox('Запомнить меня' ,'auth-form__rememberme')}}
-						<a href="recover-password.html" class="form__link form__link--recover">Забыли пароль?</a>
-					</div>
-
-					<div class="form__buttons">
-						{{item.btn('Войти', 'button--default form__btn')}}
-					</div>
-
-					<div class="section-header form__devider">
-						<span class="section-header__text">или войдите через</span>
-					</div>
-
-					{{item.social('form__social')}}
-
-					<div class="form-success">
-						<div class="form-success__center">
-							<h3 class="form-success__title">Спасибо за регистрацию!</h3>
+				<div class="form__inner">
+					<form class="auth-form">
+						<div class="input input--email form__input">
+							<input type='email' class="input__field" placeholder="Ваш e-mail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+							<span class="input__error">*Какая-то ошибочка вышла</span>
 						</div>
-					</div>
 
-				</form>
+						<div class="form__buttons">
+							{{item.btn('Восстановить пароль', 'button--default form__btn')}}
+						</div>
+
+						<div class="form-success">
+							<div class="form-success__center">
+								<h3 class="form-success__title">Вам на почту было отправленно сообщение с подтверждением сброса пароля.</h3>
+							</div>
+						</div>
+
+					</form>
+				</div>
 			</div>
 		</div>
 
 	</div>
 
-</main>
-<!-- end home password -->
+</main><!-- end home password -->
 
 {% endblock %}
