--- a/src/templates/catalog.html
+++ b/src/templates/catalog.html
@@ -1,7 +1,7 @@
 ---
 title: Каталог
 
-changer: 
+changer:
  - title: Все
    class: is-checked
  - title: Дюпон
@@ -79,7 +79,7 @@ changer:
 				</div><!-- end catalog-content__empty -->
 
 				<!-- begin catalog-content__btn -->
-				<button class="button button--transparent button--info catalog-content__btn">Показать еще</button><!-- end catalog-content__btn -->
+				<button class="button button--transparent button--accent catalog-content__btn">Показать еще</button><!-- end catalog-content__btn -->
 
 				<!-- begin pagination -->
 				<div class="pagination">
@@ -114,8 +114,8 @@ changer:
 
 		</div><!-- end catalog__wrap -->
 
-		<!-- begin seoblock --> 
-		<section class="seoblock">  
+		<!-- begin seoblock -->
+		<section class="seoblock">
 			<div class="container">
 				<p class="seoblock__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, reprehenderit earum. Molestiae tenetur pariatur, sequi quo id quisquam dolorum non fuga incidunt maiores suscipit repudiandae repellat corporis, cumque a placeat maxime quaerat quidem in ullam totam. Ratione quo quam esse asperiores corrupti consequuntur maiores? Accusantium, saepe est illum placeat aliquid omnis consequuntur, neque tempora itaque optio debitis veritatis, molestias magnam ad aperiam explicabo perspiciatis atque ullam nihil vel assumenda. Cum!</p>
 			</div>
