--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -85,11 +85,10 @@
 					</ul>
 
 					{{item.social('footer__social')}}
-					
+
 				</div>
 			</div>
 
 		</div>
 	</div>
-</footer>
-<!-- end footer -->
+</footer><!-- end footer -->
