--- a/src/sass/components/_select.scss
+++ b/src/sass/components/_select.scss
@@ -1,4 +1,4 @@
-.bz-select{
+.bz-select {
 	display: inline-block;
 	width: 100%;
 	height: 40px;
@@ -8,8 +8,8 @@
 	border: 1px solid $color-border--light;
 	border-radius: $border-radius;
 	position: relative;
-	&::before{
-		content: '\f107';
+	&::before {
+		content: "\f107";
 		font-family: fontawesome;
 		@include vy;
 		right: 13px;
@@ -17,7 +17,7 @@
 	@include max-screen(320) {
 		width: 132px;
 	}
-	select{
+	select {
 		width: 100%;
 		height: 100%;
 		width: 100%;
@@ -25,24 +25,38 @@
 		border: 0;
 		appearance: none;
 	}
-}//bb-select
+} //bb-select
 
-.bz-select--dark{
-	.select2-container{min-width: 185px;}
-	.select2-container--default .select2-selection--single{border: 0;}
-	.select2-container--default.select2-container--open.select2-container--below .select2-selection--single, .select2-container--default.select2-container--open.select2-container--below .select2-selection--multiple{
+.bz-select--dark {
+	.select2-container {
+		min-width: 185px;
+	}
+	.select2-container--default .select2-selection--single {
+		border: 0;
+	}
+	.select2-container--default.select2-container--open.select2-container--below
+		.select2-selection--single,
+	.select2-container--default.select2-container--open.select2-container--below
+		.select2-selection--multiple {
 		border-bottom: 1px solid $color-border--light;
-		box-shadow: 0 7px 12px 0 rgba(0,0,0,.2);
+		box-shadow: 0 7px 12px 0 rgba(0, 0, 0, 0.2);
 
-		.select2-selection__rendered{color: $color-text;}
-		.select2-selection__arrow{
-			b{
-				&::before{color: $color-text;}
+		.select2-selection__rendered {
+			color: $color-text;
+		}
+		.select2-selection__arrow {
+			b {
+				&::before {
+					color: $color-text;
+				}
 			}
 		}
 	}
-	.select2-container--default .select2-search--dropdown .select2-search__field, .select2-dropdown{
+	.select2-container--default
+		.select2-search--dropdown
+		.select2-search__field,
+	.select2-dropdown {
 		color: #fff;
 		border-color: $color-bg--dark;
 	}
-}//.bz-select--dark
+} //.bz-select--dark
