--- a/src/templates/partials/components/_catalog-filter.html
+++ b/src/templates/partials/components/_catalog-filter.html
@@ -6,36 +6,32 @@
 			{{item.btn('Сбросить', 'button button--link')}}
 		</div>
 		<div class="catalog-filter__body accordeon accordeon--other js-accordeon">
+
 			<div class="catalog-filter__item js-catalog-filter-item accordeon__item is-open">
 				<div class="catalog-filter__subtitle accordeon__title">Цвет</div>
 				<div class="catalog-filter__content accordeon__content js-scroll">
 					<div class="catalog-filter__subitem">
 						{{ item.checkbox('белый', 'checkbox--transform js-checkbox') }}
-						<span class="catalog-filter__color"
-						      data-filter-color="#fff"></span>
+						<span class="catalog-filter__color" data-filter-color="#fff"></span>
 					</div>
 					<div class="catalog-filter__subitem">
 						{{ item.checkbox('кремовый', 'checkbox--transform js-checkbox') }}
-						<span class="catalog-filter__color"
-						      data-filter-color="#e4d8cb"></span>
+						<span class="catalog-filter__color" data-filter-color="#e4d8cb"></span>
 					</div>
 					<div class="catalog-filter__subitem">
 						{{ item.checkbox('синий', 'checkbox--transform js-checkbox') }}
-						<span class="catalog-filter__color"
-						      data-filter-color="#46358d"></span>
+						<span class="catalog-filter__color" data-filter-color="#46358d"></span>
 					</div>
 					<div class="catalog-filter__subitem">
 						{{ item.checkbox('зеленый', 'checkbox--transform js-checkbox') }}
-						<span class="catalog-filter__color"
-						      data-filter-color="#233e23"></span>
+						<span class="catalog-filter__color" data-filter-color="#233e23"></span>
 					</div>
-
 				</div>
 			</div>
+
 			<div class="catalog-filter__item js-catalog-filter-item accordeon__item">
 				<div class="catalog-filter__subtitle accordeon__title">Плотность ткани</div>
-				<div class="catalog-filter__content accordeon__content js-scroll"
-				     style="display: none;">
+				<div class="catalog-filter__content accordeon__content js-scroll" style="display: none;">
 					<div class="catalog-filter__subitem">
 						{{ item.checkbox('110', 'checkbox--transform') }}
 					</div>
@@ -53,16 +49,13 @@
 					</div>
 				</div>
 			</div>
+
 			<div class="catalog-filter__item js-catalog-filter-item accordeon__item">
 				<div class="catalog-filter__subtitle accordeon__title">Цена</div>
-				<div class="catalog-filter__content accordeon__content js-scroll"
-				     style="display: none;">
+				<div class="catalog-filter__content accordeon__content js-scroll" style="display: none;">
 					<div class="catalog-filter__item_price js-catalog-filter-item-price">
 						<div class="catalog-filter__range range">
-							<div class="range__slider"
-							     id="js-catalog-filter-slider"
-							     data-start="350"
-							     data-end="680"></div>
+							<div class="range__slider" id="js-catalog-filter-slider" data-start="350" data-end="680"></div>
 						</div>
 						<div class="range__diapazon">
 							<div class="range__from">
@@ -77,10 +70,10 @@
 					</div>
 				</div>
 			</div>
+
 			<div class="catalog-filter__item js-catalog-filter-item accordeon__item">
 				<div class="catalog-filter__subtitle accordeon__title">Производитель</div>
-				<div class="catalog-filter__content accordeon__content js-scroll"
-				     style="display: none;">
+				<div class="catalog-filter__content accordeon__content js-scroll" style="display: none;">
 					<div class="catalog-filter__subitem">
 						{{ item.checkbox('Турция', 'checkbox--transform') }}
 					</div>
@@ -95,22 +88,19 @@
 					</div>
 				</div>
 			</div>
+
 		</div>
 		<div class="catalog-filter__footer">
-			<a href="javascript:void(0)"
-			   class="catalog-filter__btn catalog-filter__btn--close js-catalog-filter--hide">Закрыть</a>
-			<a href="javascript:void(0)"
-			   class="catalog-filter__btn catalog-filter__btn--aply js-catalog-filter--hide">Применить</a>
+			<a href="javascript:void(0)" class="catalog-filter__btn catalog-filter__btn--close js-catalog-filter--hide">Закрыть</a>
+			<a href="javascript:void(0)" class="catalog-filter__btn catalog-filter__btn--aply js-catalog-filter--hide">Применить</a>
 		</div>
 	</div>
-
 
 	<!-- begin catalog-filter__cloth -->
 	<div class="catalog-filter__cloth cloth">
 		<h3 class="h3 cloth__title">Тип ткани</h3>
 		<div class="cloth__item">
-			<a href="#"
-			   class="cloth__subtitle">Атлас
+			<a href="#" class="cloth__subtitle">Атлас
 				<span class="cloth__count">1100</span>
 			</a>
 			<ul>
@@ -129,8 +119,7 @@
 			</ul>
 		</div>
 		<div class="cloth__item">
-			<a href="#"
-			   class="cloth__subtitle">Бархат
+			<a href="#" class="cloth__subtitle">Бархат
 				<span class="cloth__count">800</span>
 			</a>
 			<ul>
@@ -139,7 +128,5 @@
 				</li>
 			</ul>
 		</div>
-	</div>
-	<!-- end catalog-filter__cloth -->
-</div>
-<!-- end catalog-filter -->
+	</div><!-- end catalog-filter__cloth -->
+</div><!-- end catalog-filter -->
